TinyMUX 2.7:  CHANGES
Last Update:  December 2006

Major changes that may affect performance and require softcode tweaks:
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 -- Placeholder.


Feature Additions:
~~~~~~~~~~~~~~~~~
 -- Support optional action list with @break.  Add corresponding
    @assert command. (Issue 36).
 -- Help files support PennMUSH-style multiple topics for each help entry;
    consecutive &FOO lines refer to the same content (Issue 238).
 -- Add lpad(), cpad(), and rpad() functions to duplicate previous
    non-truncating ljust(), center(), and rjust functionality (Issue 13).


Bug Fixes:
~~~~~~~~~
 -- INFO should show 'Patches' or 'INFO 1', but not both (Issue 236).
 -- @dolist and @trig were not passing TRACE bit through (Issue 237).
 -- Using \ as a shortcut to @emit no longer causes the beginning of the
    message to be escaped (Issue 219).
 -- @verb/no_name used unterminated verb_sw table (Issued 243).
 -- Guest objects left DARK through announcement code (Issue 244).
 -- @wall evaluated a speechmod before processing the message (Issue 16).
 -- @wall's switches did not interact properly (Issue 30).


Performance Enhancements:
~~~~~~~~~~~~~~~~~~~~~~~~
 -- Help entries use less memory (specific improvements described in
    Issue 238 comments).
 -- munge() translates results through a hash table instead of
    repeated linear searching (Issue 247).


Cosmetic Changes:
~~~~~~~~~~~~~~~~
 -- Added Doxygen file headers (Issue 102).


Miscellaneous:
~~~~~~~~~~~~~
 -- Documented Lbufref and Regref pools in 'wizhelp @list alloc'.
 -- Documented use of a single backslash as a proper shortcut to
    @emit (Issue 219).